[gd_scene load_steps=14 format=2]

[ext_resource path="res://scripts/states/fall_1.gd" type="Script" id=1]
[ext_resource path="res://scenes/spongebob/mesh_animated.tscn" type="PackedScene" id=2]
[ext_resource path="res://scripts/finite_state_machine/finite_state_machine.gd" type="Script" id=3]
[ext_resource path="res://scripts/spongebob.gd" type="Script" id=4]
[ext_resource path="res://scripts/states/grounded.gd" type="Script" id=5]
[ext_resource path="res://scripts/states/jump_1.gd" type="Script" id=6]
[ext_resource path="res://scripts/states/attack.gd" type="Script" id=7]
[ext_resource path="res://scripts/states/fall_2.gd" type="Script" id=8]
[ext_resource path="res://scripts/states/jump_2.gd" type="Script" id=9]
[ext_resource path="res://scripts/states/slam.gd" type="Script" id=10]
[ext_resource path="res://scripts/states/bash.gd" type="Script" id=11]
[ext_resource path="res://scripts/camera.gd" type="Script" id=12]

[sub_resource type="SphereShape" id=2]
radius = 0.5

[node name="Spongebob" type="KinematicBody"]
script = ExtResource( 4 )

[node name="FiniteStateMachine" type="Node" parent="."]
script = ExtResource( 3 )

[node name="grounded" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 5 )

[node name="jump_1" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 6 )

[node name="fall_1" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 1 )

[node name="jump_2" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 9 )

[node name="fall_2" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 8 )

[node name="attack" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 7 )

[node name="slam" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 10 )

[node name="bash" type="Node" parent="FiniteStateMachine"]
script = ExtResource( 11 )

[node name="CameraTarget" type="Spatial" parent="."]
script = ExtResource( 12 )

[node name="Camera" type="Camera" parent="CameraTarget"]
transform = Transform( 1, 0, 0, 0, 0.965926, 0.258819, 0, -0.258819, 0.965926, 0, 3, 5 )
fov = 60.0
far = 1500.0

[node name="Collision" type="CollisionShape" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.5, 0 )
shape = SubResource( 2 )

[node name="MeshAnimated" parent="Collision" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.5, 0 )
